--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "next": "14.2.16",
     "next-auth": "latest",
     "next-themes": "latest",
-    "nodemailer": "latest",
+    "nodemailer": "^6.10.1",
     "path": "latest",
     "pdf.js-extract": "latest",
     "react": "^18",
@@ -86,6 +86,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
