--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "date-fns": "latest",
     "embla-carousel-react": "latest",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
     "fs": "latest",
     "immer": "latest",
     "input-otp": "latest",
@@ -65,6 +66,7 @@
     "nodemailer": "^6.10.1",
     "path": "latest",
     "pdf.js-extract": "latest",
+    "razorpay": "^2.9.6",
     "react": "^18",
     "react-day-picker": "latest",
     "react-dom": "^18",
@@ -86,6 +88,7 @@
     "zustand": "latest"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
