--- a/package.json
+++ b/package.json
@@ -66,9 +66,10 @@
     "immer": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^15.4.5",
     "next-auth": "latest",
     "next-themes": "latest",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.10.1",
     "path": "latest",
     "pdf.js-extract": "latest",
@@ -96,6 +97,7 @@
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^22",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
