--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "latest",
     "bcryptjs": "latest",
+    "canvas": "^3.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
